--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 rvm: 1.9.3
 language: objective-c
 before_script:
-   - pod --version
-   - gem which cocoapods
-   - gem update cocoapods --no-ri --no-rdoc
-   - gem install xcpretty
+   - gem install xcpretty --no-ri --no-rdoc
 script:
-  - xcodebuild test -workspace FCModel.xcworkspace -scheme FCModelTest -verbose -configuration Debug -sdk iphonesimulator7.0 -destination 'platform=iOS Simulator,name=iPhone Retina (4-inch),OS=latest'
+  - xcodebuild test -workspace FCModel.xcworkspace -scheme FCModel -verbose -configuration Debug -sdk iphonesimulator7.0 -destination 'platform=iOS Simulator,name=iPhone Retina (4-inch),OS=latest'
 notifications:
   email: false
